[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://scripts/pad.gd" type="Script" id=2]
[ext_resource path="res://images/pad1.png" type="Texture" id=3]
[ext_resource path="res://scripts/ball.gd" type="Script" id=4]
[ext_resource path="res://images/ball1.png" type="Texture" id=5]
[ext_resource path="res://scenes/walls.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ControlPanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/level1.tscn" type="PackedScene" id=8]
[ext_resource path="res://images/start_button.png" type="Texture" id=9]
[ext_resource path="res://fonts/Averia-Gruesa.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://scenes/GameOver.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 9.47479 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="InputEventAction" id=3]

device = 0
action = ""
pressed = true

[sub_resource type="ShortCut" id=4]

shortcut = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]

size = 40
use_mipmaps = false
use_filter = true
font_data = ExtResource( 10 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="game" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="pad" type="KinematicBody2D" parent="." index="0"]

position = Vector2( 507, 487 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 2 )

[node name="pad1" type="Sprite" parent="pad" index="0"]

position = Vector2( 0, 3.3241 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pad" index="1"]

visible = false
position = Vector2( -0.461454, 0 )
scale = Vector2( 8.5645, 1 )
shape = SubResource( 1 )

[node name="ball" type="KinematicBody2D" parent="." index="1"]

position = Vector2( 512, 449.374 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 4 )

[node name="ball1" type="Sprite" parent="ball" index="0"]

position = Vector2( 2.26498e-06, -2.21606 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball" index="1"]

position = Vector2( 2.26498e-06, -2.21606 )
shape = SubResource( 2 )

[node name="walls" parent="." index="2" instance=ExtResource( 6 )]

_sections_unfolded = [ "Visibility" ]

[node name="ControlPanel" parent="." index="3" instance=ExtResource( 7 )]

[node name="start_position" type="Position2D" parent="." index="4"]

position = Vector2( 512, 447.158 )

[node name="bricks" type="Node2D" parent="." index="5"]

[node name="level" parent="bricks" index="0" instance=ExtResource( 8 )]

[node name="StartButton" type="TextureButton" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 413.0
margin_top = 244.0
margin_right = 624.0
margin_bottom = 333.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = SubResource( 4 )
group = null
texture_normal = ExtResource( 9 )
_sections_unfolded = [ "Anchor", "Margin", "Material", "Rect", "Textures", "Visibility", "custom_fonts" ]

[node name="Label" type="Label" parent="StartButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 36.0
margin_top = 20.0
margin_right = 176.0
margin_bottom = 71.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "START"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="GameOver" parent="." index="7" instance=ExtResource( 11 )]

visible = false

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]


